# invoice-gen

./: Cargo.toml  flake.nix
src/: main.rs  template.hbs
