[package]
name = "invoice-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
clap = { version = "4.4", features = ["derive"] }
clio = { version = "0.3", features = ["clap-parse"] }
handlebars = "4.4"
rust_decimal = "1.32"
serde = { version = "1.0", features = ["derive"] }
temp-dir = "0.1"
toml = "0.8"
